--- a/project-3/style.css
+++ b/project-3/style.css
@@ -52,12 +52,22 @@ top: 38px;
 }
 
 #middle_section_title {
-/* Gallery */
 /* Information */
 position: absolute;
 width: 456px;
 height: 84px;
 left: calc(50% - 456px/2 - 1px);
+top: 38px;
+}
+
+#right_section_title {
+/* Draw */
+
+
+position: absolute;
+width: 210px;
+height: 84px;
+left: calc(50% - 210px/2 + 576px);
 top: 38px;
 }
 
