--- a/project-3/style.css
+++ b/project-3/style.css
@@ -72,15 +72,7 @@ top: 38px;
 }
 
 
-img{
-    height: windowHeight;
-    width: windowWidth;
-     transition: width 2s, height 2s;
-}
-
-.bigger {
-    height: 200px;
-    width: 200px;
-    border-radius: 100%;
-    transition: width 2s, height 2s;
+iframe {
+  width: 576px;
+height: 1117px;
 }
