--- a/project-3/style.css
+++ b/project-3/style.css
@@ -5,74 +5,111 @@ body {
 /* titles */
 
 #main_title {
-/* Biracial Babies Grow into Biracial Adults */
-position: absolute;
-width: 1658px;
-height: 64px;
-left: calc(50% - 1658px/2 - 1px);
-bottom: 62px;
+    /* Biracial Babies Grow into Biracial Adults */
+    position: absolute;
+    width: 1658px;
+    height: 64px;
+    left: calc(50% - 1658px/2 - 1px);
+    bottom: 62px;
 
-font-family: 'Syne';
-font-style: normal;
-font-weight: 800;
-font-size: 53px;
-line-height: 64px;
-/* identical to box height */
+    font-family: 'Syne';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 53px;
+    line-height: 64px;
+    /* identical to box height */
 
-text-align: center;
+    text-align: center;
 
-color: #FFE600;
+    color: #FFE600;
 
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 }
 
 .section_title {
-/* Gallery */
-font-family: 'Syne';
-font-style: normal;
-font-weight: 700;
-font-size: 70px;
-line-height: 84px;
-/* identical to box height */
+    /* Gallery */
+    font-family: 'Syne';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 70px;
+    line-height: 84px;
+    /* identical to box height */
 
-text-align: center;
+    text-align: center;
 
-color: #FFE600;
+    color: #FFE600;
 }
 
 #left_section_title {
-/* Gallery */
-position: absolute;
-width: 273px;
-height: 84px;
-left: calc(50% - 273px/2 - 576.5px);
-top: 38px;
+    /* Gallery */
+    position: absolute;
+    width: 273px;
+    height: 84px;
+    left: calc(50% - 273px/2 - 576.5px);
+    top: 38px;
 
 }
 
 #middle_section_title {
-/* Information */
-position: absolute;
-width: 456px;
-height: 84px;
-left: calc(50% - 456px/2 - 1px);
-top: 38px;
+    /* Information */
+    position: absolute;
+    width: 456px;
+    height: 84px;
+    left: calc(50% - 456px/2 - 1px);
+    top: 38px;
 }
 
 #right_section_title {
-/* Draw */
+    /* Draw */
 
 
-position: absolute;
-width: 210px;
-height: 84px;
-left: calc(50% - 210px/2 + 576px);
-top: 38px;
+    position: absolute;
+    width: 210px;
+    height: 84px;
+    left: calc(50% - 210px/2 + 576px);
+    top: 38px;
 }
 
 
+/*
+
 iframe {
-  width: 576px;
+    width: 576px;
+    height: 1117px;
+
+}
+*/
+
+#middle_sketch {
+      width: 576px;
+    height: 1117px;
+    position: absolute;
+    width: 576px;
+    height: 1117px;
+    left: calc(50% - 576px/2);
+    top: calc(50% - 1117px/2);
+
+}
+
+#left_sketch {
+      width: 776px;
+    height: 1117px;
+    position: absolute;
+width: 576px;
 height: 1117px;
+left: 0px;
+top: calc(50% - 1117px/2);
+
+}
+
+#right_sketch {
+      width: 776px;
+    height: 1117px;
+  position: absolute;
+width: 576px;
+height: 1117px;
+right: 0px;
+top: calc(50% - 1117px/2);
+
 }
