more draw stuff

--- a/project-3/style.css
+++ b/project-3/style.css
@@ -183,7 +183,7 @@ canvas {
 
 .smallImage{
   border-radius: 17px;
-  border: 1px solid blue;
+  border: 1px solid yellow;
   margin-top: 15px;
   margin-left: 15px;
   margin-right: 15px;
