--- a/project-3/style.css
+++ b/project-3/style.css
@@ -223,7 +223,29 @@ canvas {
   grid-template-columns: auto auto auto auto;
 }
 
+.image-button{
+   height:300px;
+   width:300x;
+   cursor:pointer;
+    border:none;
+    outline: none;
+}
+
+.accordian_content{
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.2s;
+    
+    
+    padding: 0 15px;
+}
+
+
+
+/*
+
 img {
   width: 300px;
   height: 300px;
 }
+*/
