--- a/project-3/style.css
+++ b/project-3/style.css
@@ -222,7 +222,7 @@ canvas {
     display: grid;
     width: 310px;
 /*    grid-template-rows: auto auto auto auto;*/
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto;
     
 }
 
@@ -265,8 +265,10 @@ canvas {
     font-size: 20px;
 }
 
+/*
 img {
   width: 300px;
   height: 300px;
 }
+*/
 
