--- a/project-3/style.css
+++ b/project-3/style.css
@@ -19,6 +19,15 @@ p {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.infopage_title{
+    font-family: 'Syne';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 55px;
+    line-height: 84px;
+     color: #FFE600;
+}
+
 #main_title {
     /* Biracial Babies Grow into Biracial Adults */
     position: absolute;
